apps/base/markmine/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: markmine
  labels:
    app.kubernetes.io/name: markmine
