apps/base/markmine/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: markmine-backend
  namespace: markmine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: markmine-backend
  template:
    metadata:
      labels:
        app: markmine-backend
        policy-type: app
    spec:
      containers:
        - name: backend
          image: ghcr.io/leotsgo/markmine-backend:main-d7d49d6-1770328818 # {"$imagepolicy": "flux-system:markmine-backend"}
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
      restartPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: markmine-frontend
  namespace: markmine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: markmine-frontend
  template:
    metadata:
      labels:
        app: markmine-frontend
        policy-type: app
    spec:
      containers:
        - name: frontend
          image: ghcr.io/leotsgo/markmine-frontend:main-d7d49d6-1770328815 # {"$imagepolicy": "flux-system:markmine-frontend"}
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 3001
              protocol: TCP
      restartPolicy: Always
